revert: "fix: chrome should not wrap mid-line"
This reverts commit 12e8a31a5b3f328ac1281c7651895f05f0bf85d2.

--- a/packages/core/src/editor/editor.css
+++ b/packages/core/src/editor/editor.css
@@ -79,22 +79,21 @@ Tippy popups that are appended to document.body directly
 
 /* Give a remote user a caret */
 .collaboration-cursor__caret {
-  /* Chrome needs this to be inline to not wrap text */
-  display: inline;
-  border-left: 1px solid #0d0d0d;
-  border-right: 1px solid #0d0d0d;
-  margin-left: -1px;
-  margin-right: -1px;
+  outline: 1px solid #0d0d0d;
   position: relative;
   word-break: normal;
   white-space: nowrap !important;
 }
 
-@-moz-document url-prefix() {
-  .collaboration-cursor__caret {
-    /* Firefox needs this to be inline-block to not have whitespace wrap the caret to a new line */
-    display: inline-block;
-  }
+/* Allow the caret to be hovered over */
+.collaboration-cursor__caret::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 2px;
 }
 
 /* Render the username above the caret */
